[gd_scene load_steps=3 format=3 uid="uid://b5oxiuv2s82e3"]

[ext_resource type="Script" path="res://armor/armor_item.gd" id="1_w30v0"]
[ext_resource type="Texture2D" uid="uid://7muyhvx4fenl" path="res://assets/sprites/rpg_icon/Individual icons (16x16)/42.png" id="2_mphoq"]

[node name="ArmorItem" type="Area2D"]
script = ExtResource("1_w30v0")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_mphoq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
